tests/golden/fixtures/syntax-var-err-width-after-array/expected.err
Error: invalid syntax: unexpected ':'
   ╭─[ tests/golden/fixtures/syntax-var-err-width-after-array/input.k65:1:12 ]
   │
 1 │ var bar[20]:word = 0x2000
   │            ┬  
   │            ╰── inside symbolic-subscript field list
   │ 
   │ Help: for typed arrays, place the type before the array length (e.g. `var bar:word[20]`)
   │ 
   │ Note: Symbolic-subscript field lists declare named offsets inside a var's address window. The grammar is: `[ .field0[count0]:type0, .field1:type1, ... ]`. Only `byte`, `word`, and `far` are accepted as the type tag.
───╯
